robotic-codes/src/test/test_repchar.txt
test_repchar.cpp: In function ‘int main()’:
test_repchar.cpp:12:20: error: expected initializer before ‘l’
   unsigned int num l;
                    ^
test_repchar.cpp:14:10: error: ‘num’ was not declared in this scope
   cin >> num;
          ^~~
test_repchar.cpp:14:10: note: suggested alternative: ‘enum’
   cin >> num;
          ^~~
          enum
test_repchar.cpp:15:10: error: ‘l’ was not declared in this scope
   cin >> l;
          ^
test_repchar.cpp:16:8: error: ‘repchar’ was not declared in this scope
   s1 = repchar(i, num);
        ^~~~~~~
test_repchar.cpp:16:8: note: suggested alternative: ‘getchar’
   s1 = repchar(i, num);
        ^~~~~~~
        getchar
